Fix projects alignment on desktop

--- a/src/components/Work/Work.scss
+++ b/src/components/Work/Work.scss
@@ -83,9 +83,13 @@
       position: relative;
       margin-bottom: 100%;
 
-      @include onTablet {
-        margin-bottom: 0;
+      &--first,
+      &--last {
+        @include onTablet {
+          margin-bottom: 0;
+        }
       }
+
     }
   }
 }
